<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_green_dark"
        android:contentDescription="@string/contentCalauerga"
        app:srcCompat="@drawable/calauerga" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:text="@string/caleruega"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Distance"
        android:layout_marginBottom="177dp"
        android:text="@string/location"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="125dp"
        android:text="@string/distance"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:layout_toStartOf="@+id/Title"
        android:text="@string/back" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/Title"
        android:text="@string/next" />

    <EditText
        android:id="@+id/loc"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Location"
        android:layout_alignStart="@+id/Title"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/locCalauerga" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Distance"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/distanceCalauerga" />

</RelativeLayout>